tests/ui/parser/misspelled-keywords/mod.rs
mode parser;
//~^ ERROR expected one of

fn main() {}
